# Cascading-Review-Utility-Classifier

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
configs/: labeling_job.yaml
scripts/: batch_review.py  evaluate_labeling.py  evaluate_prompt.py  generate_form.py  generate_sheet.py  ingest_data.py  label_reviews.py
src/classifier_core/core/: config.py  constants.py  crud.py  db.py  logger.py  types.py
src/classifier_core/extras/: label_utils.py
src/classifier_core/schemas/: database.py  label.py
tests/unit/: conftest.py  test_crud.py  test_db.py
