[project]
name = "cascading-review-utility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mkdocs-material>=9.7.6",
    "mlflow>=3.13.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "polars>=1.41.2",
    "prefect>=3.7.4",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "scikit-learn>=1.9.0",
    "sqlmodel>=0.0.38",
    "transformers>=5.12.0",
    "xgboost>=3.2.0",
]
